--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -610,25 +610,25 @@
                 <label class="col-12 fs-5" style="height: max-content;font-family: 'Convergence', sans-serif;">Colors</label>
                     <div class="container text-center">
                         <div class="row" style="height: 80px">
-                            <div class="col" id="black">
+                            <div class="col" id="altoBlack">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/black.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="blue">
+                            <div class="col" id="altoBlue">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/blue.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="gray">
+                            <div class="col" id="altoGray">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/gray.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="green">
+                            <div class="col" id="altoGreen">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/green.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="silver">
+                            <div class="col" id="altoSilver">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/silver.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="red">
+                            <div class="col" id="altoRed">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/red.png" height="70px" width="99px">
                             </div>
-                            <div class="col" id="white">
+                            <div class="col" id="altoWhite">
                                 <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/white.png" height="70px" width="99px">
                             </div>
                         </div>
@@ -656,7 +656,112 @@
         </div>
     </div>
 
-   
+    <div class="row" id="SuzukiAltoK10" style="height: 654px;">
+        <div class="col-7">
+            <div class="col-12 " style="height:70px;">
+                <label class="col-12 fs-2 mt-2"
+                       style="height: max-content;font-family: 'Convergence', sans-serif;">Suzuki Alto K10 - Auto</label>
+            </div>
+            <div class="col ms-5 me-3 bg-black ">
+                <div id="carouselExampleCaptions1" class="carousel slide" style="height: 453px">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assests/images/General_Cars/Suzuki_Alto_K10-Auto/front.jpg" class="d-block w-100" alt="..." height="455px">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Front View</h5>
+                                <p>This is a image of Suzuki Alto K10 - Auto car front view.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/General_Cars/Suzuki_Alto_K10-Auto/side.jpg" class="d-block w-100" alt="..."height="455px">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Side View</h5>
+                                <p>This is a image of Suzuki Alto K10 - Auto car side view.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/General_Cars/Suzuki_Alto_K10-Auto/back.jpg" class="d-block w-100" alt="..."height="455px">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Back View</h5>
+                                <p>This is a image of Suzuki Alto K10 - Auto car back view.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/General_Cars/Suzuki_Alto_K10-Auto/interior.jpg" class="d-block w-100" alt="..."height="455px">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Interior View</h5>
+                                <p>This is a image of Suzuki Alto K10 - Auto car interior view </p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-12 mt-1 ms-2" style="height:110px;">
+                <label class="col-12 fs-5" style="height: max-content;font-family: 'Convergence', sans-serif;">Colors</label>
+                <div class="container text-center">
+                    <div class="row" style="height: 80px">
+                        <div class="col" id="altoK10Black">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/black.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Blue">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/blue.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Gray">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/gray.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Green">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/green.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Silver">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/silver.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Red1">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/red.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10Red2">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/red.png" height="70px" width="99px">
+                        </div>
+                        <div class="col" id="altoK10White">
+                            <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/colors/white.png" height="70px" width="99px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-5">
+            <div class="row ms-4 mt-5" style="height: 550px;width: 525px; border-radius: 18px;background-color: #d4d4d4">
+                <div class="col-12 mt-2 " style="height:70px;">
+                    <label class="col-12 fs-3 mt-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Details</label>
+                </div>
+                <div class="col-12" style="height: 385px">
+                    <p class="col-12 fs-5 mt-2">Registration number : LH 1117 <br> Brand : Suzuki <br> Type : General <br> Number of passengers : 04 passengers <br>
+                        Transmission type : Auto<br> Fuel Type : Petrol <br> Daily rate : Rs 3000 <br>Free mileage for a Day : 100km <br> Monthly rate : Rs 71,390.00
+                        <br> Free mileage for a Month : 2400km <br> Price for extra KM : Rs 35.00 <br> Color : Red</p>
+                </div>
+                <div class="col-12 " style="height: 65px">
+                    <div class="row justify-content-end">
+                        <div class="col-4">
+                            <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!---------------------- car booking model start------------------------------>
     <div class="modal fade modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
