--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -47,8 +47,8 @@
         <!---------------------nav bar items----------------------->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="userDashboard.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">About</a>
@@ -56,9 +56,7 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Contact</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="userDashboard.html">Back</a>
-                </li>
+
             </ul>
         </div>
     </nav>
@@ -119,7 +117,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 30.00</p>
-                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -199,7 +197,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="#" class="btn btn-dark" id="">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -267,7 +265,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Transmission Type : Manual <br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -340,7 +338,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -416,7 +414,7 @@
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 <br> Price per
                                             Extra Km : Rs 30.00</p>
-                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -488,7 +486,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Fuel Type : Petrol <br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
+                                        <a class="btn btn-dark SuzukiAlto-PremiumBtn">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -550,15 +548,16 @@
         </div>
 </main>
 
-<main id="cars" class="container-fluid">
+<main id="cars">
 
-    <div class="row" id="SuzukiAlto-Premium" style="height: 654px;">
-        <div class="col-7">
-            <div class="col-12 " style="height:70px;">
-                <label class="col-12 fs-2 mt-2"
-                       style="height: max-content;font-family: 'Convergence', sans-serif;">Suzuki Alto - Premium - Manual</label>
-            </div>
-            <div class="col ms-5 me-3 bg-black ">
+    <div class="row container-fluid" id="SuzukiAlto-Premium" style="height: 654px;">
+        <div class="row">
+            <div class="col-7">
+                <div class="col-12 " style="height:70px;">
+                    <label class="col-12 fs-2 mt-2"
+                           style="height: max-content;font-family: 'Convergence', sans-serif;">Suzuki Alto - Premium - Manual</label>
+                </div>
+                <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions" class="carousel slide" style="height: 453px">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -606,8 +605,8 @@
                         </button>
                     </div>
                 </div>
-            <div class="col-12 mt-1 ms-2" style="height:110px;">
-                <label class="col-12 fs-5" style="height: max-content;font-family: 'Convergence', sans-serif;">Colors</label>
+                <div class="col-12 mt-1 ms-2" style="height:110px;">
+                    <label class="col-12 fs-5" style="height: max-content;font-family: 'Convergence', sans-serif;">Colors</label>
                     <div class="container text-center">
                         <div class="row" style="height: 80px">
                             <div class="col" id="altoBlack">
@@ -633,22 +632,23 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
-        <div class="col-5">
-            <div class="row ms-4 mt-5" style="height: 550px;width: 525px; border-radius: 18px;background-color: #d4d4d4">
-                <div class="col-12 mt-2 " style="height:70px;">
-                    <label class="col-12 fs-3 mt-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Details</label>
-                </div>
-                <div class="col-12" style="height: 385px">
-                    <p class="col-12 fs-5 mt-2">Registration number : LH 1117 <br> Brand : Suzuki <br> Type : General <br> Number of passengers : 04 passengers <br>
-                        Transmission type : Manual<br> Fuel Type : Petrol <br> Daily rate : Rs 2500 <br>Free mileage for a Day : 100km <br> Monthly rate : Rs 64,350.00
-                     <br> Free mileage for a Month : 2400km <br> Price for extra KM : Rs 30.00 <br> Color : Red</p>
-                </div>
-                <div class="col-12 " style="height: 65px">
-                    <div class="row justify-content-end">
-                        <div class="col-4">
-                            <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+            <div class="col-5">
+                <div class="row ms-5 mt-5" style="height: 550px;width: 525px; border-radius: 18px;background-color: #d4d4d4">
+                    <div class="col-12 mt-2 " style="height:70px;">
+                        <label class="col-12 fs-3 mt-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Details</label>
+                    </div>
+                    <div class="col-12" style="height: 385px">
+                        <p class="col-12 fs-5 mt-2">Registration number : LH 1117 <br> Brand : Suzuki <br> Type : General <br> Number of passengers : 04 passengers <br>
+                            Transmission type : Manual<br> Fuel Type : Petrol <br> Daily rate : Rs 2500 <br>Free mileage for a Day : 100km <br> Monthly rate : Rs 64,350.00
+                            <br> Free mileage for a Month : 2400km <br> Price for extra KM : Rs 30.00 <br> Color : Red</p>
+                    </div>
+                    <div class="col-12 " style="height: 65px">
+                        <div class="row justify-content-end">
+                            <div class="col-4">
+                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -656,7 +656,7 @@
         </div>
     </div>
 
-    <div class="row" id="SuzukiAltoK10" style="height: 654px;">
+    <div class="row container-fluid" id="SuzukiAltoK10" style="height: 654px;">
         <div class="col-7">
             <div class="col-12 " style="height:70px;">
                 <label class="col-12 fs-2 mt-2"
