--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -47,8 +47,8 @@
         <!---------------------nav bar items----------------------->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="userDashboard.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">About</a>
@@ -56,9 +56,7 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Contact</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="userDashboard.html">Back</a>
-                </li>
+
             </ul>
         </div>
     </nav>
