design car pages in primeumCars html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -646,7 +646,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark fs-4 ms-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -755,7 +755,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -855,7 +855,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -946,7 +946,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -1055,7 +1055,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -1082,15 +1082,19 @@
                             <label for="inputRentDate" class="form-label fs-4 fw-bold">Rent Date : </label>
                             <label class="form-label fs-4 fw-bold" id="inputRentDate">2023-02-27</label>
                         </div>
-                        <div class="col-md-7">
-                            <label for="inputCraID" class="form-label fs-5">Registration Num of Car : </label>
-                            <label type="text" class="form-label fs-5" id="inputCraID">LH-1117</label>
+                        <div class="col-md-4">
+                            <label for="carColour" class="form-label">Car Color : </label>
+                            <select class="form-select" id="carColour" aria-label="Default select example"></select>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-8 align-self-center">
+                            <label for="inputCraID" class="form-label fs-5">Registration Num of Car : </label>
+                            <label type="text" class="form-label fs-5" id="inputCraID"></label>
+                        </div>
+                        <div class="col-md-4">
                             <label for="inputId" class="form-label fs-5">User ID : </label>
                             <label type="text" class="form-label fs-5" id="inputId">U001</label>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-8">
                             <label for="inputName" class="form-label fs-5">User Name : </label>
                             <label class="form-label fs-5" id="inputName">Hansika Perera</label>
                         </div>
